[package]
name = "hezardastan-core"
version = "0.1.0"
edition = "2021"
authors = ["Anonymous Contributor <core.anon@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"

# Dependencies for QUIC protocol (AOQUIC)
quinn = "0.10"
rcgen = "0.12"

# Dependency for random number generation in obfuscation
rand = "0.8" # برای تولید اعداد تصادفی

# ... سایر وابستگی‌ها
# For structured logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# For async traits
async-trait = "0.1"

# For asynchronous runtime and networking
tokio = { version = "1", features = ["full"] } # "full" feature includes networking, time, etc.

# For structured logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
